tests/idris2/coverage/coverage010/expected
1/1: Building casetot (casetot.idr)
Error: main is not covering.

casetot:12:1--12:13
 08 |
 09 | ints : Vect 4 Int
 10 | ints = [1, 2, 3, 4]
 11 |
 12 | main : IO ()
      ^^^^^^^^^^^^

Calls non covering function Main.case block in case block in main
